refactor: improve code organization and test coverage
- Reorganize imports and method ordering for better readability
- Add comprehensive integration tests for all components
- Update Docker configuration for notebook environment
- Improve error handling and validation in core classes
- Enhance test utilities and base test classes
- Update SpotBugs exclusions for cleaner static analysis